# Bandsaw

./: README.md
Bandsaw_MAXTRIX/: pyproject.toml
Bandsaw_MAXTRIX-1-camera-work/01-bandsaw_software/: log.html  report.html
Bandsaw_MAXTRIX-1-camera-work/01-bandsaw_software/bandsaw/: bandsaw_monitor.py
Bandsaw_MAXTRIX-1-camera-work/01-bandsaw_software/gui/: headless_monitor.py  pyqt_app.py
Bandsaw_MAXTRIX-1-camera-work/02-bandsaw-hardware/solidworks parts/: BANDSAW-100000100.SLDPRT  sheetmetal test.SLDPRT  ~$top lid.SLDPRT
Bandsaw_MAXTRIX-1-camera-work/03-bandsaw-admin/Guides/: QuickStart Guide.docx
Bandsaw_MAXTRIX-2-typst-docs/01-bandsaw_software/: output.xml
Bandsaw_MAXTRIX-2-typst-docs/01-bandsaw_software/bandsaw/: alert.py  mpu_camera.py  video_capture.py
Bandsaw_MAXTRIX-2-typst-docs/01-bandsaw_software/tests/robot/Keywords/: BandsawLibrary.py
Bandsaw_MAXTRIX-2-typst-docs/01-bandsaw_software/tests/robot/tests/: BandsawTests.robot
Bandsaw_MAXTRIX-2-typst-docs/02-bandsaw-hardware/solidworks parts/: top lid.SLDPRT
Bandsaw_MAXTRIX-2-typst-docs/Documentation/: main.typ
Bandsaw_MAXTRIX-main/: pyproject.toml
Bandsaw_MAXTRIX-main/bandsaw/: bandsaw_monitor.py  mpu_camera.py  slit_detection.py
Bandsaw_MAXTRIX-main/docker/: Dockerfile
Bandsaw_MAXTRIX/bandsaw/: alert.py  bandsaw_monitor.py  hand_detection.py  mpu_camera.py  slit_detection.py  video_capture.py
Bandsaw_MAXTRIX/bandsaw.egg-info/: PKG-INFO
Bandsaw_MAXTRIX_archived/: README.md
Bandsaw_MAXTRIX_archived/bandsaw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
