[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bandsaw"
version = "1.0.0"
dependencies = [
  "numpy~=2.4.2",
  "opencv-python~=4.13.0.92",
  "mediapipe~=0.10.32",
  "smbus2~=0.6.0",
  "picamera2~=0.3.34",
]
requires-python = ">=3.11"
authors = [
  {name = "Rachel Lohan", email = "rlohan3@gatech.edu"},
]
description = "Package for the Bandsaw project in the MatrixLab VIP."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["bandsaw", "hand", "detection"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/GeorgiaTech-DDI/bandsaw"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/GeorgiaTech-DDI/bandsaw"
"Bug Tracker" = "https://github.com/GeorgiaTech-DDI/bandsaw/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
]
